--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express-ejs-layouts": "^2.5.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.20"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.25.2"
   }
 }
